--- a/ms-service-a.yml
+++ b/ms-service-a.yml
@@ -4,7 +4,10 @@ server:
 spring:
   cloud:
     config:
-      fail-fast: false
+      fail-fast: true
+     retry:
+       max-attempts: 10000
+       max-interval: 1000
     consul:
       discovery:
         instanceId: ms-service-a
