--- a/gateway.yml
+++ b/gateway.yml
@@ -1,70 +1,55 @@
-spring:
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-      routes:
-      - id: serviceBooks
-        uri: lb://service-Books
-        predicates:
-        - Path=/books/**
-        filters:
-        - RewritePath=/books/(?<segment>.*), /$\{segment}
-        - name: Hystrix
-          args:
-            name: monitor-books
-            fallbackUri: forward:/fallback/serviceBooks
-      - id: serviceA
-        uri: lb://service-A
-        predicates:
-        - Path=/srva/**
-        filters:
-        - RewritePath=/srva/(?<segment>.*), /$\{segment}
-        - name: Hystrix
-          args:
-            name: monitor-srvA
-            fallbackUri: forward:/fallback/serviceA
-      - id: ServiceB
-        uri: lb://service-B
-        predicates:
-        - Path=/srvb/**
-        filters:
-        - RewritePath=/srvb/(?<segment>.*), /$\{segment}
-        - name: Hystrix
-          args:
-            name: monitor-srvB
-            fallbackUri: forward:/fallback/serviceB  
-      - id: ServiceWeather
-        uri: lb://service-Weather
-        predicates:
-        - Path=/weather/**
-        filters:
-        - RewritePath=/weather/(?<segment>.*), /$\{segment}
-        - name: Hystrix
-          args:
-            name: monitor-weather
-            fallbackUri: forward:/fallback/serviceWeather  
-      - id: MQActivityService
-        uri: lb://activity
-        predicates:
-        - Path=/act/**
-        filters:
-        - RewritePath=/act/(?<segment>.*), /$\{segment} 
-    consul:
-      discovery:
-        instanceId: Gateway
-        health-check-interval: 5s
-      config:
-        management: 
-          enabled: true
+server:
+  port: '8080'
+
+
 management:
+  health:
+    circuitbreakers:
+      enabled: true
   security: 
     enabled: false
   endpoints:
     web:
       exposure:
-        include: hystrix.stream, info, health
-hystrix:
-   dashboard:
-       proxy-stream-allow-list: "*"
+        include: '*'
+      path-mapping:
+        prometheus: metrics
+  # endpoint:
+  #   metrics:
+  #     enabled: true
+  #   prometheus:
+  #     enabled: true
+  #   health:
+  #     show-details: always
+  
+spring:
+  cloud:
+    consul:
+      discovery:
+        instanceId: ms-gateway
+        health-check-interval: 5s
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+      - id: ms-service-a
+        uri: lb://ms-service-a
+        predicates:
+        - Path=/srva/**
+        filters:
+        - RewritePath=/srva/(?<segment>.*), /$\{segment}
+        - name: CircuitBreaker
+          args:
+            name: monitor-srvA
+            fallbackUri: forward:/fallback/serviceA
+      - id: ms-service-b
+        uri: lb://ms-service-b
+        predicates:
+        - Path=/srvb/**
+        filters:
+        - RewritePath=/srvb/(?<segment>.*), /$\{segment}
+        - name: CircuitBreaker
+          args:
+            name: monitor-srvB
+            fallbackUri: forward:/fallback/serviceB
