--- a/ms-service-a.yml
+++ b/ms-service-a.yml
@@ -16,13 +16,31 @@ management:
   health:
     circuitbreakers:
       enabled: true
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: 'true'
+    tags:
+      application: ${spring.application.name}
+    export:
+      prometheus:
+        enabled: true
   endpoints:
     web:
       exposure:
-        include: health
-  endpoint:
-    health:
-      show-details: always
+        include: health, metrics, prometheus
+      path-mapping:
+        prometheus: metrics,info,health,prometheus
     
 
 resilience4j:
