--- a/ms-service-b.yml
+++ b/ms-service-b.yml
@@ -6,3 +6,33 @@ spring:
       discovery:
         instanceId: ${spring.application.name}:${random.value}
         health-check-interval: 5s
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: 'true'
+    tags:
+      application: ${spring.application.name}:${random.value}
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, prometheus
+      path-mapping:
+        prometheus: prometheus
