--- a/ms-gateway.yml
+++ b/ms-gateway.yml
@@ -29,7 +29,7 @@ management:
       exposure:
         include: health, metrics, prometheus
       path-mapping:
-        prometheus: metrics,info,health,prometheus
+        prometheus: prometheus
 
 spring:
   cloud:
